--- a/point_simulator/package.xml
+++ b/point_simulator/package.xml
@@ -12,6 +12,7 @@
   <depend>nav_msgs</depend>
   <depend>tf_transformations</depend>
   <depend>visualization_msgs</depend>
+  <depend>sensor_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
