Add all deps and remove ad hoc requirements

--- a/gps_publisher/package.xml
+++ b/gps_publisher/package.xml
@@ -9,7 +9,7 @@
 
   <exec_depend>rclpy</exec_depend>
 	<exec_depend>sensor_msgs</exec_depend>
-	<exec_depend>pyubx2</exec_depend>
+	<exec_depend>python3-pyubx2-pip</exec_depend>
 	<exec_depend>python3-serial</exec_depend>
   <exec_depend>nav_utils</exec_depend>
 
