--- a/occupancy_grid_transform/package.xml
+++ b/occupancy_grid_transform/package.xml
@@ -2,11 +2,16 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>occupancy_grid_transform</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="ryan.liao0305@gmail.com">umarv</maintainer>
+  <version>0.1.0</version>
+  <description>Occupancy grid transform and inflation layer</description>
+  <maintainer email="ryanliao@umich.edu">Ryan Liao</maintainer>
   <license>Apache-2.0</license>
 
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>python3-numpy</exec_depend>
   <exec_depend>nav_utils</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
