--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=68", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "nav-infrastructure-tooling"
 version = "0.1.0"
@@ -5,10 +9,13 @@ description = "Tooling config for a ROS 2 Python workspace"
 requires-python = ">=3.10"
 
 [project.optional-dependencies]
-dev = [
+tooling = [
     "ruff>=0.6.0",
     "mypy>=1.8",
 ]
+
+[tool.setuptools]
+packages = []
 
 [tool.ruff]
 target-version = "py310"
