Add to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
+# Vscode
+.vscode/
+
+# Python packaging
+*.egg-info/
+.eggs/
+PKG-INFO
+requirements.txt
+
+# Bytecode
 __pycache__/
-.vscode
+*.py[cod]
+*.pyo
+*.pyd
+
+# Tool caches
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+# Editable install artifacts
+pip-wheel-metadata/
+
+# ROS2
+build/
+install/
+log/
