--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,29 +11,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  python-checks:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-          cache: "pip"
-
-      - name: Install tooling deps
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[tooling]"
-
-      - name: Run checks
-        run: |
-          bash scripts/check.sh
-
   ros-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     env:
       ROS_DISTRO: humble
 
