--- a/teleop/config/teleop_xbox.yaml
+++ b/teleop/config/teleop_xbox.yaml
@@ -19,5 +19,5 @@ teleop_twist_joy_node:
     scale_angular_turbo:
       yaw: 1.5
 
-    enable_button: 6 # L2 shoulder button
-    enable_turbo_button: 4  # L1 shoulder button
+    enable_button: 5 # RB shoulder button
+    enable_turbo_button: 4  # LB shoulder button
