--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ws/src/nav_infrastructure_simple
+          submodules: recursive
 
       - name: Set up ROS
         uses: ros-tooling/setup-ros@v0.7
@@ -32,10 +33,9 @@ jobs:
           sudo rosdep init 2>/dev/null || true
           rosdep update
 
-      - name: Setup deps (repo-scoped rosdep + tooling)
-        working-directory: ws/src/nav_infrastructure_simple
+      - name: Install ROS deps via rosdep
         run: |
-          bash scripts/setup.sh
+          rosdep install --from-paths ws/src/nav_infrastructure_simple --ignore-src -r -y
 
       - name: Build (repo packages)
         working-directory: ws/src/nav_infrastructure_simple
