--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,8 @@ module = [
 
     "tf2_ros.*",
     "tf_transformations.*",
+    "tf2_geometry_msgs.*",
+    "tf2_geometry_msgs",
 ]
 ignore_missing_imports = true
 disable_error_code = ["attr-defined"]
