All exec depend

--- a/localization_simulator/package.xml
+++ b/localization_simulator/package.xml
@@ -7,14 +7,13 @@
   <maintainer email="umarv-leads@umich.edu">ARV</maintainer>
   <license>Apache-2.0</license>
 
-  <depend>rclpy</depend>
-  <depend>geometry_msgs</depend>
-  <depend>nav_msgs</depend>
-  <depend>tf_transformations</depend>
-  <depend>sensor_msgs</depend>
-  <depend>robot_localization</depend>
-  <depend>geographic_msgs</depend>
-
+  <exec_depend>rclpy</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
+  <exec_depend>tf_transformations</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>robot_localization</exec_depend>
+  <exec_depend>geographic_msgs</exec_depend>
   <exec_depend>nav_utils</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
