--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,7 +2,7 @@ name: Build CI image
 
 on:
   push:
-    branches: [main]
+    branches: [main, ryanliao/ci-speedup]
     paths:
       - Dockerfile
       - '**/package.xml'
