Speed up ROS2 test CI (#50)
## What has changed
- Added Dockerfile and a docker build workflow to push and build docker
image on pushes for ROS2 test to use so the CI doesn't have to do any
setup or install any dependency
- `.github/workflows/test.yml` uses the custom image instead. Removes
submodule initialization since they shouldn't be tested

## Testing plan
### Benchmarking
The original CI took around 5 minutes to run:
<img width="2757" height="624" alt="Screenshot_from_2026-02-20_01-34-34"
src="https://github.com/user-attachments/assets/77489497-172a-402b-ac47-5cb458003ced"
/>
As shown below, the test CI now takes around 40 seconds, which is an 86%
reduction.

The docker build script runs correctly as shown in the actions log
<img width="571" height="127" alt="Screenshot from 2026-02-20 02-43-29"
src="https://github.com/user-attachments/assets/3c94d229-5d40-4fe9-9c09-1d776886fe4b"
/>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,8 @@
-name: ci
+name: test
+
+permissions:
+  contents: read
+  packages: read
 
 on:
   push:
@@ -7,45 +11,36 @@ on:
     branches: [main]
 
 concurrency:
-  group: ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: test-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
   ros-tests:
     runs-on: ubuntu-22.04
-    env:
-      ROS_DISTRO: humble
+    container:
+      image: ghcr.io/${{ github.repository }}:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    defaults:
+      run:
+        working-directory: ws/src/${{ github.event.repository.name }}
 
     steps:
-      - name: Checkout (into ws/src/nav_infrastructure_simple)
+      - name: Checkout into repo
         uses: actions/checkout@v4
         with:
-          path: ws/src/nav_infrastructure_simple
-          submodules: recursive
+          path: ws/src/${{ github.event.repository.name }}
 
-      - name: Set up ROS
-        uses: ros-tooling/setup-ros@v0.7
-        with:
-          required-ros-distributions: ${{ env.ROS_DISTRO }}
-
-      - name: rosdep init/update
-        run: |
-          sudo rosdep init 2>/dev/null || true
-          rosdep update
-
-      - name: Install ROS deps via rosdep
-        run: |
-          rosdep install --from-paths ws/src/nav_infrastructure_simple --ignore-src -r -y
+      - name: Install any new deps (top-up)
+        run: rosdep install --from-paths . --ignore-src -r -y
 
       - name: Build (repo packages)
-        working-directory: ws/src/nav_infrastructure_simple
-        run: |
-          bash scripts/build.sh
+        run: bash scripts/build.sh
 
       - name: Test (repo packages)
-        working-directory: ws/src/nav_infrastructure_simple
-        run: |
-          bash scripts/test.sh
+        run: bash scripts/test.sh
 
       - name: Upload logs on failure
         if: failure()
