--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,12 +1,14 @@
 name: checks
 
+permissions:
+  contents: read
+  packages: read
+
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 concurrency:
   group: checks-${{ github.ref }}
@@ -14,23 +16,33 @@ concurrency:
 
 jobs:
   python-checks:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    container:
+      image: ghcr.io/${{ github.repository }}:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    defaults:
+      run:
+        working-directory: ws/src/${{ github.event.repository.name }}
 
     steps:
-      - name: Checkout
+      - name: Checkout into repo
         uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
-          cache: "pip"
+          path: ws/src/${{ github.event.repository.name }}
+
+      - name: Install any new deps (top-up)
+        run: rosdep install --from-paths . --ignore-src -r -y
 
       - name: Install tooling deps
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -e ".[tooling]"
+          python3 -m pip install -U pip
+          pip install ".[tooling]"
 
       - name: Run checks
+        shell: bash
         run: |
+          source /opt/ros/humble/setup.bash
           bash scripts/checks.sh
