--- a/nav_bringup/config/teleop_ps4.yaml
+++ b/nav_bringup/config/teleop_ps4.yaml
@@ -5,6 +5,8 @@ joystick_node:
 
 teleop_twist_joy_node:
   ros__parameters:
+    publish_stamped_twist: true
+
     axis_linear:
       x: 1
     scale_linear:
