--- a/nav_bringup/package.xml
+++ b/nav_bringup/package.xml
@@ -9,10 +9,11 @@
 
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>launch_ros</exec_depend>
+  <exec_depend>robot_localization</exec_depend>
   <exec_depend>vectornav</exec_depend>
   <exec_depend>gps_publisher</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
-  <exec_depend>point_simulator</exec_depend>
+  <exec_depend>localization_simulator</exec_depend>
   <exec_depend>goal_selection</exec_depend>
   <exec_depend>occupancy_grid_transform</exec_depend>
   <exec_depend>path_tracking</exec_depend>
