Create core launch file for shared nodes

--- a/nav_bringup/config/teleop_ps4.yaml
+++ b/nav_bringup/config/teleop_ps4.yaml
@@ -1,9 +1,9 @@
-joystick_node:
+joy:
   ros__parameters:
     deadzone: 0.05
     autorepeat_rate: 20.0
 
-teleop_twist_joy_node:
+teleop_twist_joy:
   ros__parameters:
     axis_linear:
       x: 1
