Update config for teleop and sensors

--- a/nav_bringup/config/imu.yaml
+++ b/nav_bringup/config/imu.yaml
@@ -1,7 +1,7 @@
 vectornav:
   ros__parameters:
     # Defined in udev rules, change according to your system. Typically /dev/ttyUSB0
-    serial_port: /dev/ttyUSB0
+    serial_port: /dev/imu
 
     # Acceptable baud rates : 9600, 19200, 38400, 57600, 115200, 230400, 460800, 921600
     # Datasheet states 128000 works but from experiments it does not.
@@ -54,9 +54,9 @@ vectornav:
                               0.0,   0.0,    0.01]
 
     # Angular Velocity Covariances not produced by the sensor
-    angular_vel_covariance: [0.005,  0.0,    0.0,
-                             0.0,    0.005,  0.0,
-                             0.0,    0.0,    0.005]
+    angular_vel_covariance: [0.001,  0.0,    0.0,
+                             0.0,    0.001,  0.0,
+                             0.0,    0.0,    0.001]
 
     # Orientation covariance overwritten in driver, this is unused in the code
     orientation_covariance: [0.01,  0.0,   0.0,
